Add Georgia Pro to font-stack

--- a/writ.css
+++ b/writ.css
@@ -9,7 +9,7 @@
 /* Fonts, sizes & vertical rhythm */
 
 html {
-  font-family: Palatino, Georgia, Lucida Bright, Book Antiqua, serif;
+  font-family: Palatino, Georgia Pro, Georgia, Lucida Bright, Book Antiqua, serif;
   font-size: 16px;
   line-height: 1.5rem;
 }
